force-app/main/default/objects/Menu_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veg</fullName>
            </value>
            <value>
                <fullName>Non-Veg</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Main Course</fullName>
            </value>
            <value>
                <fullName>Desserts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>