force-app/main/default/objects/Menu_Item__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North Indian Veg</fullName>
            </value>
            <value>
                <fullName>South Indian Veg</fullName>
            </value>
            <value>
                <fullName>Paneer Dishes</fullName>
            </value>
            <value>
                <fullName>Veg Curries</fullName>
            </value>
            <value>
                <fullName>Veg Biryani</fullName>
            </value>
            <value>
                <fullName>Salads</fullName>
            </value>
            <value>
                <fullName>Veg Starters</fullName>
            </value>
            <value>
                <fullName>Chicken Dishes</fullName>
            </value>
            <value>
                <fullName>Mutton Dishes</fullName>
            </value>
            <value>
                <fullName>Egg Dishes</fullName>
            </value>
            <value>
                <fullName>Fish &amp; Seafood</fullName>
            </value>
            <value>
                <fullName>Non-Veg Curries</fullName>
            </value>
            <value>
                <fullName>Non-Veg Biryani</fullName>
            </value>
            <value>
                <fullName>Non-Veg Starters</fullName>
            </value>
            <value>
                <fullName>Pasta</fullName>
            </value>
            <value>
                <fullName>Pizza</fullName>
            </value>
            <value>
                <fullName>Risotto</fullName>
            </value>
            <value>
                <fullName>Lasagna</fullName>
            </value>
            <value>
                <fullName>Italian Breads</fullName>
            </value>
            <value>
                <fullName>Bruschetta</fullName>
            </value>
            <value>
                <fullName>Noodles</fullName>
            </value>
            <value>
                <fullName>Manchurian</fullName>
            </value>
            <value>
                <fullName>Spring Rolls</fullName>
            </value>
            <value>
                <fullName>Fried Rice</fullName>
            </value>
            <value>
                <fullName>Momos</fullName>
            </value>
            <value>
                <fullName>Schezwan Dishes</fullName>
            </value>
            <value>
                <fullName>Veg Main Course</fullName>
            </value>
            <value>
                <fullName>Non-Veg Main Course</fullName>
            </value>
            <value>
                <fullName>Dal &amp; Rice Combos</fullName>
            </value>
            <value>
                <fullName>Roti/Naan Combos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>